--- a/src/app/admin/userscreate/userscreate.component.html
+++ b/src/app/admin/userscreate/userscreate.component.html
@@ -1,5 +1,21 @@
+<style>
+  form {
+  width: 50%;
+  padding: 50px px;
+  margin: 100px 650px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  }
+#head {
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+</style>
+
 <form>
-  <div class="card-header border-1 font-weight-bold">Create Profile: </div>
+  <div id="head" class="card-header border-1 font-weight-bold" >Create Profile </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Full Name</label>
     <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Full Name">
