--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+
+<div id="header">
 <h1>{{title}}</h1>
 
 <nav class="navebar navrbar-default">
@@ -11,4 +13,6 @@
     </li>
   </ul>
 </nav>
+</div>
+
 <router-outlet></router-outlet>
