--- a/src/app/admin/bloglist/bloglist.component.html
+++ b/src/app/admin/bloglist/bloglist.component.html
@@ -1,1 +1,76 @@
-<p>bloglist works!</p>
+<style>
+  div {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+#a {
+  margin-bottom: 100px;
+  margin-left: 300px;
+  margin-right: 300px;
+}
+#b {
+  margin-bottom: 100px;
+  margin-left: 300px;
+  margin-right: 300px;
+}
+#c {
+  margin-bottom: 100px;
+  margin-left: 300px;
+  margin-right: 300px;
+}
+#d {
+  margin-bottom: 100px;
+  margin-left: 300px;
+  margin-right: 300px;
+}
+</style>
+
+
+<section id="a" class="card">
+	<h1 class="title">Median</h1>
+	<div class="blog-card">
+		<img class="blog-img" src="" />
+		<div class="text-overlay">
+			<h2>Java</h2>
+      <p>summary<a href="#" class="read-more">Read More</a></p>
+		</div>
+	</div>
+	<div class="credit">Created by <a class="creator-link" href="https://brettstevenson.io">author</a></div>
+</section>
+
+<section id="b" class="card">
+	<h1 class="title">Median</h1>
+	<div class="blog-card">
+		<img class="blog-img" src="" />
+		<div class="text-overlay">
+			<h2>JavaScripts</h2>
+      <p>summary<a href="#" class="read-more">Read More</a></p>
+		</div>
+	</div>
+	<div class="credit">Created by <a class="creator-link" href="https://brettstevenson.io">author</a></div>
+</section>
+
+<section id="c" class="card">
+	<h1 class="title">Median</h1>
+	<div class="blog-card">
+		<img class="blog-img" src="" />
+		<div class="text-overlay">
+			<h2>Angular</h2>
+      <p>summary<a href="#" class="read-more">Read More</a></p>
+		</div>
+	</div>
+	<div class="credit">Created by <a class="creator-link" href="https://brettstevenson.io">author</a></div>
+</section>
+
+<section id="d" class="card">
+	<h1 class="title">Median</h1>
+	<div class="blog-card">
+		<img class="blog-img" src="" />
+		<div class="text-overlay">
+			<h2>React</h2>
+			<p>summary<a href="#" class="read-more">Read More</a></p>
+		</div>
+	</div>
+	<div class="credit">Created by <a class="creator-link" href="https://brettstevenson.io">author</a></div>
+</section>
